Android - Send upstream message
Bug: 23417898
Change-Id: I97c6e30e5a3186d1e14cf98cb07565a3502f72d1

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="button_unregister">Unregister</string>
     <string name="title_activity_main">MainActivity</string>
 
+    <string name="upstream_message_label">Send message upstream</string>
+    <string name="button_send">Send</string>
+
 </resources>
