Android - Subscribe to topic, and receive message
This commit:
1. Adds topic subscription to the Android client
2. Moves the button listeners to Java instead of in
the xml.

Bug: 23419542
Change-Id: I9d0152525e5df94779064d958888f70fabaa65d6

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="upstream_message_label">Send message upstream</string>
     <string name="button_send">Send</string>
 
+    <string name="pubsub_prefix_label">/topics/</string>
+    <string name="pubsub_topic_label">myTopic</string>
+    <string name="button_subscribe">Subscribe</string>
+
 </resources>
