Show status instead of toast when subscribe to topic
Change-Id: Ia4812c96b5fa5222b6e5c81b21046dcb861565cb

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -9,11 +9,10 @@
     <string name="button_unregister">Unregister</string>
     <string name="title_activity_main">MainActivity</string>
 
-    <string name="upstream_message_label">Send message upstream</string>
+    <string name="upstream_message_label">Message text</string>
     <string name="button_send">Send</string>
 
-    <string name="pubsub_prefix_label">/topics/</string>
-    <string name="pubsub_topic_label">myTopic</string>
+    <string name="pubsub_topic_label">/topics/myTopic</string>
     <string name="button_subscribe">Subscribe</string>
 
 </resources>
